# zeltask

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
src/zeltask/: __init__.py  cli.py
src/zeltask/commands/: __init__.py  blueprint_commands.py  task_commands.py
src/zeltask/core/: __init__.py  models.py  storage.py  task_manager.py
