[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zeltask"
version = "0.1.0"
description = "Task management CLI tool"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Zeldean" }
]

dependencies = [
  "click>=8.1",
  "zelutil"
]

[project.scripts]
zeltask = "zeltask.cli:task"

[tool.setuptools.packages.find]
where = ["src"]